test/sema/typeck/trait/generic-assoc-type-unknown.dora
// Test error when accessing unknown associated type on type param
trait MyIterator {
    type Item;
}

trait Foo[T: MyIterator] {
    fn make(): T::Unknown {
        unreachable[T::Unknown]()
    }
}
